--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/config": "2.1.*",
-        "symfony/dependency-injection": "2.1.*",
-        "symfony/http-kernel": "2.1.*",
+        "symfony/config": "~2.1",
+        "symfony/dependency-injection": "~2.1",
+        "symfony/http-kernel": "~2.1",
+        "sculpin/taxonomy-contrib": "self.version",
         "sculpin/core": "self.version"
     },
     "autoload": {
