--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/dependency-injection": "~2.1",
         "symfony/http-kernel": "~2.1",
         "sculpin/taxonomy-contrib": "self.version",
+        "sculpin/proxy-source-collection-contrib": "self.version",
         "sculpin/core": "self.version"
     },
     "autoload": {
