--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,8 @@
         "sculpin/core": "self.version"
     },
     "autoload": {
-        "psr-0": { "Sculpin\\Bundle\\PostsBundle": "" }
+        "psr-4": { "Sculpin\\Bundle\\PostsBundle\\": "" }
     },
-    "target-dir": "Sculpin/Bundle/PostsBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "2.0.x-dev"
